--- a/Bibabo/app/src/main/AndroidManifest.xml
+++ b/Bibabo/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
 
     <uses-feature android:glEsVersion="0x00030001" android:required="true"/>
 
+    <uses-permission android:name="android.permission.CAMERA"/>
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
