--- a/Bibabo/app/src/main/AndroidManifest.xml
+++ b/Bibabo/app/src/main/AndroidManifest.xml
@@ -5,7 +5,8 @@
     <uses-feature android:glEsVersion="0x00030001" android:required="true"/>
 
     <uses-permission android:name="android.permission.CAMERA"/>
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -14,11 +15,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Bibabo">
+
         <activity
             android:name=".WizardActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.Bibabo.NoActionBar"
-            android:screenOrientation="landscape"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
