--- a/Bibabo/app/src/main/AndroidManifest.xml
+++ b/Bibabo/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/Theme.Bibabo">
 
         <activity
-            android:name=".WizardActivity"
+            android:name=".LauncherActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.Bibabo.NoActionBar"
             android:exported="true">
@@ -27,6 +27,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".WizardActivity"
+            android:label="Wizard"
+            android:theme="@style/Theme.Bibabo.NoActionBar"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
